Scrollbar jitter fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@ body,
 html {
     min-height: 100%;
     position: relative;
+    margin-left: calc(100vw - 100%);
     font-family: $main-font;
     margin: 0;
     padding: 0;
